--- a/blog/assets/scss/default.scss
+++ b/blog/assets/scss/default.scss
@@ -108,6 +108,14 @@ article {
             margin-top: 2.5em;
         }
 
+        h3 {
+            color: $textColour;
+            font-size: 1.5em;
+            font-weight: 700;
+            margin: 1.5em auto 1em;
+            padding: 0;
+        }
+
         p {
             line-height: 1.75;
             margin: 0 0 1.5em;
