Add version releases

--- a/blog/assets/scss/default.scss
+++ b/blog/assets/scss/default.scss
@@ -116,7 +116,7 @@ article {
             padding: 0;
         }
 
-        p {
+        p, ol, ul {
             line-height: 1.75;
             margin: 0 0 1.5em;
         }
