Add initial car history blog

--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header role="banner">
-        <h1><a href="/">Jamie Hurst - Software and System Engineer</a></h1>
+        <h1><a href="/">Jamie Hurst - Software and System Engineer, Enthusiast of Terrible Cars</a></h1>
     </header>
     <main role="main">
         <div id="content">
@@ -17,7 +17,6 @@
         </div>
     </main>
     <footer role="contentinfo">&copy; Copyright Jamie Hurst 2021-2022<br />System {{ g.version }}</footer>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-217639974-1"></script>
     <script>window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);}gtag('js', new Date());gtag('config', 'UA-217639974-1');</script>
 </body>
