--- a/blog/assets/scss/default.scss
+++ b/blog/assets/scss/default.scss
@@ -105,7 +105,7 @@ article {
         max-width: 700px;
 
         &.content {
-            margin-top: 2.5em;
+            margin-top: 2em;
         }
 
         h3 {
@@ -131,6 +131,8 @@ article {
         }
 
         img {
+            display: block;
+            margin: 0 auto;
             max-width: 100%;
         }
 
