--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -10,6 +10,10 @@
 <body>
     <header role="banner">
         <h1><a href="/">Jamie Hurst - Software and System Engineer, Enthusiast of Terrible Cars</a></h1>
+        <p class="float-right links">
+            <a href="/">Blog</a>
+            <a href="/now">Now</a>
+        </p>
     </header>
     <main role="main">
         <div id="content">
