Add GH and Mastodon links

--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -13,6 +13,8 @@
         <p class="float-right links">
             <a href="/">Blog</a>
             <a href="/now">Now</a>
+            <a target="_blank" rel="me" href="https://github.com/jamiefdhurst">GitHub</a>
+            <a target="_blank" rel="me" href="https://mastodon.social/@jamiefdhurst">Mastodon</a>
         </p>
     </header>
     <main role="main">
