Update now page with developments

--- a/blog/templates/now.html
+++ b/blog/templates/now.html
@@ -9,15 +9,16 @@
         day-to-day. I aim to update this page relatively frequently to tell you what I'm currently up to in and outside of 
         work.
       </p>
+      <p><em>Last updated: 13th February 2023</em></p>
       <ul>
-        <li>Working at Tesco Bank as a Principal Engineer, currently rolling out the new containerised platform and building out standards, patterns and pipelines to get our engineers ready to deliver our first production application.</li>
-        <li>Recently spoke at <a href="https://www.youtube.com/watch?v=saY2IwJquhE" target="_blank">DevHub North on Tesco Bank's Technology journey so far</a>, and what's coming next.</li>
+        <li>Finished up at Tesco Bank recently, starting as a principal software engineer at Booking.com and looking forward to using all my skills on a new challenge.</li>
+        <li>Working on a new (and currently secret) side project when I have a little bit of spare time.</li>
+        <li>Keeping on top of my weight and fresh air lately by making sure I get out for a decent walk every day; come rain, shine or forgotten house keys.</li>
         <li>Still enjoying driving the Civic Type-R as the main car, although there are now a couple of cosmetic fixes it needs.</li>
-        <li>Wondering what I need to fix on the Land Rover Discovery first as we approach the MOT in January.</li>
-        <li>Learning about GitHub Actions and wondering if I can finally make the switch away from Jenkins.</li>
-        <li>Playing the occasional bit of GTA V and Online, when I have a spare few minutes.</li>
-        <li>Sitting in our back room where we have an open fire, as we try and reduce our normal heating bills through keeping the gas off during the day and evening.</li>
-        <li>Continuing our house renovations by completely re-plastering and decorating the bedrooms on the first floor.</li>
+        <li>Waiting on the Discovery coming back from its MOT work where it should be in a good place to keep going for the rest of the year.</li>
+        <li>Still learning about GitHub Actions and wondering if I can finally make the switch away from Jenkins, making sure I try a couple of alternatives such as GoCD too.</li>
+        <li>Playing the occasional bit of GTA Online and Goldeneye 007 on the Switch recently.</li>
+        <li>Finishing off the renovations on our first floor. We have no heating on the whole floor right now, so we're living on a mattress in my office/loft right now.</li>
       </ul>
       <p>
         This page was inspired by <a href="https://www.tempertemper.net/now" target="_blank">Martin Underhill's Now Page</a>
