Update now page for May 2023

--- a/blog/templates/now.html
+++ b/blog/templates/now.html
@@ -9,16 +9,16 @@
         day-to-day. I aim to update this page relatively frequently to tell you what I'm currently up to in and outside of 
         work.
       </p>
-      <p><em>Last updated: 13th February 2023</em></p>
+      <p><em>Last updated: 18th May 2023</em></p>
       <ul>
-        <li>Finished up at Tesco Bank recently, starting as a principal software engineer at Booking.com and looking forward to using all my skills on a new challenge.</li>
-        <li>Working on a new (and currently secret) side project when I have a little bit of spare time.</li>
-        <li>Keeping on top of my weight and fresh air lately by making sure I get out for a decent walk every day; come rain, shine or forgotten house keys.</li>
-        <li>Still enjoying driving the Civic Type-R as the main car, although there are now a couple of cosmetic fixes it needs.</li>
-        <li>Waiting on the Discovery coming back from its MOT work where it should be in a good place to keep going for the rest of the year.</li>
-        <li>Still learning about GitHub Actions and wondering if I can finally make the switch away from Jenkins, making sure I try a couple of alternatives such as GoCD too.</li>
-        <li>Playing the occasional bit of GTA Online and Goldeneye 007 on the Switch recently.</li>
-        <li>Finishing off the renovations on our first floor. We have no heating on the whole floor right now, so we're living on a mattress in my office/loft right now.</li>
+        <li>After 3 months I've now settled in my role as principal software engineer at Booking.com where I'm working with multiple teams to improve developer experience across the company.</li>
+        <li>My (still secret) side project continues, although I've not had as much time to spend on it recently.</li>
+        <li>My habits have slipped somewhat, although I'm right in the middle of a diet after spending the last few weeks frequently eating out while working away.</li>
+        <li>Still enjoying driving the Civic Type-R as the main car, although there are now a couple of cosmetic fixes it needs. The MOT is rapidly approaching...</li>
+        <li>The Discovery was back, briefly, and then developed a catastrophic coolant leak. It's in the garage having that rectified this week, which will include a new head gasket.</li>
+        <li>I've moved away from GitHub Actions and back to Jenkins, building out a new workflow to save money in AWS while providing the same convenience I want when playing with personal projects. A blog post is coming soon...</li>
+        <li>Playing the occasional bit of GTA Online and Goldeneye 007 on the Switch recently, while resisting buying Tears of the Kingdom.</li>
+        <li>Taking a break from house renovations after completing the first floor rooms, although we'll be starting on the ground floor shortly.</li>
       </ul>
       <p>
         This page was inspired by <a href="https://www.tempertemper.net/now" target="_blank">Martin Underhill's Now Page</a>
