--- a/blog/assets/scss/default.scss
+++ b/blog/assets/scss/default.scss
@@ -11,13 +11,18 @@ html, body {
 }
 
 html {
+    font-size: 12px;
     line-height: 1.15;
+
+    @media screen and (min-width: $tablet) {
+        font-size: 16px;
+    }
 }
 
 body {
     color: $textColour;
     font-family: 'Roboto', sans-serif;
-    font-size: 20px;
+    font-size: 1.25rem;
 }
 
 h1, h2, h3, h4 {
@@ -35,40 +40,40 @@ a:hover {
 
 header[role=banner] {
     margin: 0 auto;
-    max-width: 1240px;
-    padding: 1em 0;
+    max-width: $max;
+    padding: 1rem 0;
     width: 90%;
+
+    > a {
+        display: inline-block;
+        font-size: 1.125rem;
+        font-weight: 400;
+        margin: 0;
+        padding: 1rem 0;
+        vertical-align: top;
+    }
 
     p {
         margin: 0;
-        padding-top: .5em;
+        padding-top: .5rem;
     }
 }
 
 main {
     margin: 0 auto;
-    max-width: 1240px;
-    padding: 1em 0;
+    max-width: $max;
+    padding: 1rem 0;
     width: 90%;
 }
 
 footer[role=contentinfo] {
     color: $footerColour;
-    font-size: .9em;
+    font-size: .9rem;
     font-weight: 400;
     margin: 0 auto;
-    max-width: 1240px;
-    padding: 2em 0;
+    max-width: $max;
+    padding: 2rem 0;
     width: 90%;
-}
-
-h1 {
-    display: inline-block;
-    font-size: .9em;
-    font-weight: 400;
-    margin: 0;
-    padding: 1em 0;
-    vertical-align: top;
 }
 
 .float-right {
@@ -86,28 +91,28 @@ h1 {
 }
 
 article {
-    margin-bottom: 7em;
+    margin-bottom: 7rem;
     padding: 1rem 0;
 
-    h2 {
-        font-size: 2em;
+    h1 {
+        font-size: 2.5rem;
         font-weight: 900;
         margin: 0 auto;
         max-width: 700px;
-        padding: 1em 0 .75em;
+        padding: 1.5rem 0 1.25rem;
 
         a, a:link, a:visited, a:active {
             font-weight: 900;
         }
     }
 
-    h3 {
+    p.date {
         color: $footerColour;
-        font-size: .9em;
+        font-size: 1.125rem;
         font-weight: 400;
-        margin: 0 auto 2em;
+        margin: 0 auto 2.5rem;
         max-width: 700px;
-        padding: 0 0 1em;
+        padding: 0 0 1.5rem;
     }
 
     .summary, .content {
@@ -115,20 +120,20 @@ article {
         max-width: 700px;
 
         &.content {
-            margin-top: 2em;
+            margin-top: 2.5rem;
         }
 
         h3 {
             color: $textColour;
-            font-size: 1.5em;
+            font-size: 1.5rem;
             font-weight: 700;
-            margin: 1.5em auto 1em;
+            margin: 1.5rem auto 1rem;
             padding: 0;
         }
 
         p, ol, ul {
             line-height: 1.75;
-            margin: 0 0 1.5em;
+            margin: 0 0 1.5rem;
         }
 
         a, a:link, a:visited, a:active, a:hover {
@@ -149,8 +154,8 @@ article {
         code {
             background-color: $formColour;
             color: #fff;
-            font-size: .75em;
-            padding: .125em;
+            font-size: .75rem;
+            padding: .125rem;
         }
 
         pre > code {
@@ -158,7 +163,7 @@ article {
             line-height: 1.25;
             max-width: 100%;
             overflow: auto;
-            padding: .5em;
+            padding: .5rem;
         }
     }
 
@@ -175,8 +180,8 @@ article {
     color: #fff;
     cursor: pointer;
     display: inline-block;
-    font-size: 16px;
-    padding: 0.75em 2em;
+    font-size: 1rem;
+    padding: 0.75rem 2rem;
     text-decoration: none;
     text-shadow: none;
     transition: .2s;
@@ -220,7 +225,7 @@ article {
             border-radius: 3px;
             color: $linkColour;
             font-weight: 300;
-            padding: 6px 12px;
+            padding: .375rem .75rem;
             transition: .3s;
         }
 
@@ -243,10 +248,10 @@ article {
 
 .prev-next {
     border-top: 2px solid $borderColour;
-    padding: 10px 0;
+    padding: .625rem 0;
     display: flex;
     line-height: 1.5;
-    margin: 2em auto;
+    margin: 2rem auto;
     max-width: 700px;
 
     > div {
@@ -261,6 +266,6 @@ article {
     span {
         color: $footerColour;
         display: block;
-        font-size: 14px;
+        font-size: .875rem;
     }
 }
