--- a/blog/templates/index.html
+++ b/blog/templates/index.html
@@ -1,12 +1,14 @@
 {% extends 'base.html' %}
 
+{%block title %}- Software and System Engineer, Enthusiast of Terrible Cars{% endblock %}
+
 {% block content %}
   {% for article in articles %}
     <article>
-      <h2><a href="/{{ article.get_name() }}">{{ article.get_title() }}</a></h2>
-        <h3>
+      <h1><a href="/{{ article.get_name() }}">{{ article.get_title() }}</a></h1>
+        <p class="date">
           Posted on {{ article.get_date().strftime('%A %B %-d, %Y') }}
-        </h3>
+        </p>
         <div class="summary">
           {% if article.get_image() %}<p>{{ article.get_image()|safe }}</p>{% endif %}
           {% if article.get_summary() %}
