--- a/blog/templates/view.html
+++ b/blog/templates/view.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 
+{%block title %}- {{ article.get_title() }}{% endblock %}
 {% block content %}
     <article class="view" itemscope itemtype="https://schema.org/BlogPosting">
         <h1 itemprop="title headline">{{ article.get_title() }}</h1>
