Update Now page for Feb 2024

--- a/blog/templates/now.html
+++ b/blog/templates/now.html
@@ -9,16 +9,17 @@
         day-to-day. I aim to update this page relatively frequently to tell you what I'm currently up to in and outside of 
         work.
       </p>
-      <p><em>Last updated: 18th May 2023</em></p>
+      <p><em>Last updated: 10th February 2024</em></p>
       <ul>
-        <li>After 3 months I've now settled in my role as principal software engineer at Booking.com where I'm working with multiple teams to improve developer experience across the company.</li>
-        <li>My (still secret) side project continues, although I've not had as much time to spend on it recently.</li>
-        <li>My habits have slipped somewhat, although I'm right in the middle of a diet after spending the last few weeks frequently eating out while working away.</li>
-        <li>Still enjoying driving the Civic Type-R as the main car, although there are now a couple of cosmetic fixes it needs. The MOT is rapidly approaching...</li>
-        <li>The Discovery was back, briefly, and then developed a catastrophic coolant leak. It's in the garage having that rectified this week, which will include a new head gasket.</li>
-        <li>I've moved away from GitHub Actions and back to Jenkins, building out a new workflow to save money in AWS while providing the same convenience I want when playing with personal projects. A blog post is coming soon...</li>
-        <li>Playing the occasional bit of GTA Online and Goldeneye 007 on the Switch recently, while resisting buying Tears of the Kingdom.</li>
-        <li>Taking a break from house renovations after completing the first floor rooms, although we'll be starting on the ground floor shortly.</li>
+        <li>Excitedly preparing for the arrival of our baby son in early June.</li>
+        <li>Celebrating 1 year at Booking.com, where I'm continuing to help improve developer experience for teams across the company.</li>
+        <li>Travelling very often to Amsterdam, London or Manchester with work.</li>
+        <li>After a long think, moving away from Jenkins and slowly migrating all of my public and private projects to GitHub Actions.</li>
+        <li>Thinking long and hard whether I want to give up either of my cars when our baby arrives, or whether we can live with a 3-door car.</li>
+        <li>Planning for a bit of a refresh on the Civic, which needs a rear axle, some top suspension mounts and some cosmetic improvements.</li>
+        <li>Using the Discovery more often as it's hit a period of reliability, epsecially to haul things and park at the airport.</li>
+        <li>Not playing much in the way of games these days, although I was enjoying Skyrim for a while.</li>
+        <li>Planning for our new kitchen, which we have a very strict time limit on before baby arrives.</li>
       </ul>
       <p>
         This page was inspired by <a href="https://www.tempertemper.net/now" target="_blank">Martin Underhill's Now Page</a>
