--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="device-width" />
 
     <meta name="description" content="Jamie Hurst - Software and System Engineer, Enthusiast of Terrible Cars" />
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/default.min.css') }}?v={{ g.version }}" />
+    <link rel="stylesheet" type="text/css" href="/static/css/default.min.css?v={{ version }}" />
     <link rel="apple-touch-icon" sizes="180x180" href="/static/apple-touch-icon.png" />
     <link rel="shortcut icon" href="/static/favicon.ico" />
     <link rel="icon" type="image/png" sizes="32x32" href="/static/favicon-32x32.png" />
@@ -29,7 +29,7 @@
             {% block content %}{% endblock %}
         </div>
     </main>
-    <footer role="contentinfo">&copy; Copyright Jamie Hurst 2021-2024<br />System {{ g.version }}</footer>
+    <footer role="contentinfo">&copy; Copyright Jamie Hurst 2021-2024<br />System {{ version }}</footer>
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-217639974-1"></script>
     <script>window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);}gtag('js', new Date());gtag('config', 'UA-217639974-1');</script>
 </body>
