Update now - July 2024

--- a/blog/templates/now.html
+++ b/blog/templates/now.html
@@ -9,17 +9,16 @@
         day-to-day. I aim to update this page relatively frequently to tell you what I'm currently up to in and outside of 
         work.
       </p>
-      <p><em>Last updated: 10th February 2024</em></p>
+      <p><em>Last updated: 7th July 2024</em></p>
       <ul>
-        <li>Excitedly preparing for the arrival of our baby son in early June.</li>
-        <li>Celebrating 1 year at Booking.com, where I'm continuing to help improve developer experience for teams across the company.</li>
-        <li>Travelling very often to Amsterdam, London or Manchester with work.</li>
-        <li>After a long think, moving away from Jenkins and slowly migrating all of my public and private projects to GitHub Actions.</li>
-        <li>Thinking long and hard whether I want to give up either of my cars when our baby arrives, or whether we can live with a 3-door car.</li>
-        <li>Planning for a bit of a refresh on the Civic, which needs a rear axle, some top suspension mounts and some cosmetic improvements.</li>
-        <li>Using the Discovery more often as it's hit a period of reliability, epsecially to haul things and park at the airport.</li>
-        <li>Not playing much in the way of games these days, although I was enjoying Skyrim for a while.</li>
-        <li>Planning for our new kitchen, which we have a very strict time limit on before baby arrives.</li>
+        <li>My son, Ben, was born just over a month ago - learning how to be a Dad has been the most rewarding experience of my life so far, and I'm looking forward to having a lot of extended time off from the end of this month until January.</li>
+        <li>Finishing up a few tasks in the next 3 weeks at Booking.com before I head off on extended paternity, but looking forward to 2025!</li>
+        <li>My travelling has been limited to the kitchen and back, but I am heading to Amsterdam for a few days in just over a week.</li>
+        <li>Jenkins is now closed down and everything is on GitHub Actions.</li>
+        <li>I continue to use AWS for hosting, but the costs are getting a bit high. As a project while I'm off, I'm going to move back to VMs or a different/cheaper cloud provider to cut down on the bills a bit.</li>
+        <li>My Land Rover Discovery was stolen and I haven't replaced it, for now we're making do with my 3-door Honda Civic Type-R while I consider what I want next as a family car.</li>
+        <li>Watching the Fallout TV series, I've followed the same path as many and have started playing Fallout 4 when I have a spare minute, this time trying Survival mode which has been good fun.</li>
+        <li>Our new kitchen is installed, I'm now planning for the downstairs rooms and then our house will have been completely finished!</li>
       </ul>
       <p>
         This page was inspired by <a href="https://www.tempertemper.net/now" target="_blank">Martin Underhill's Now Page</a>
