Add static site article and update Now to Nov 2024

--- a/blog/templates/now.html
+++ b/blog/templates/now.html
@@ -9,16 +9,16 @@
         day-to-day. I aim to update this page relatively frequently to tell you what I'm currently up to in and outside of 
         work.
       </p>
-      <p><em>Last updated: 7th July 2024</em></p>
+      <p><em>Last updated: 12th November 2024</em></p>
       <ul>
-        <li>My son, Ben, was born just over a month ago - learning how to be a Dad has been the most rewarding experience of my life so far, and I'm looking forward to having a lot of extended time off from the end of this month until January.</li>
-        <li>Finishing up a few tasks in the next 3 weeks at Booking.com before I head off on extended paternity, but looking forward to 2025!</li>
-        <li>My travelling has been limited to the kitchen and back, but I am heading to Amsterdam for a few days in just over a week.</li>
-        <li>Jenkins is now closed down and everything is on GitHub Actions.</li>
-        <li>I continue to use AWS for hosting, but the costs are getting a bit high. As a project while I'm off, I'm going to move back to VMs or a different/cheaper cloud provider to cut down on the bills a bit.</li>
-        <li>My Land Rover Discovery was stolen and I haven't replaced it, for now we're making do with my 3-door Honda Civic Type-R while I consider what I want next as a family car.</li>
-        <li>Watching the Fallout TV series, I've followed the same path as many and have started playing Fallout 4 when I have a spare minute, this time trying Survival mode which has been good fun.</li>
-        <li>Our new kitchen is installed, I'm now planning for the downstairs rooms and then our house will have been completely finished!</li>
+        <li>I've now been on paternity leave for a little over 3 months, spending my days bonding with my son, and will be returning to work in January.</li>
+        <li>I'm keeping apprised with all the Developer Experience and DevOps updates in the meantime to stay current.</li>
+        <li>The blog has been moved into DigitalOcean from AWS, it's much cheaper and more convenient - AWS encouraged too much overkill in the solutions I was building.</li>
+        <li>Hatching plans to build a home server that does a little more than file storage, but for that I need to build something - I haven't done that for a while!</li>
+        <li>Trying to spend more time on <a href="https://howdee.social/@jamiefdhurst" target="_blank">Mastodon</a> and way less on <a href="https://x.com/jamiefdhurst" target="_blank">X/Twitter</a>, I'm not far away from closing that account now.</li>
+        <li>We're down to a single car: a sensible silver Volvo V40. The 3-door boy-racer Honda was too impractical and needed to go, so my project car days are on hold for a while.</li>
+        <li>In my downtime, I'm playing through a lot of Zelda games on my Switch. I've not finished the emulated Ocarina of Time and Majora's Mask, along with the Link's Awakening remake, and I'm about halfway through completing Breath of the Wild.</li>
+        <li>Our house is completely finished! We're now furnishing the final rooms and planning how we're going to tackle the garden in 2025.</li>
       </ul>
       <p>
         This page was inspired by <a href="https://www.tempertemper.net/now" target="_blank">Martin Underhill's Now Page</a>
