Add Mac Setup article with static assets

--- a/blog/templates/now.html
+++ b/blog/templates/now.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{%block title %}- What I'm Doing Right Now{% endblock %}
+
 {% block content %}
   <article class="view">
     <h1>What I'm doing right now...</h1>
