Update now article 28th Jan 2025

--- a/blog/templates/now.html
+++ b/blog/templates/now.html
@@ -11,16 +11,17 @@
         day-to-day. I aim to update this page relatively frequently to tell you what I'm currently up to in and outside of 
         work.
       </p>
-      <p><em>Last updated: 12th November 2024</em></p>
+      <p><em>Last updated: 28th January 2025</em></p>
       <ul>
-        <li>I've now been on paternity leave for a little over 3 months, spending my days bonding with my son, and will be returning to work in January.</li>
-        <li>I'm keeping apprised with all the Developer Experience and DevOps updates in the meantime to stay current.</li>
-        <li>The blog has been moved into DigitalOcean from AWS, it's much cheaper and more convenient - AWS encouraged too much overkill in the solutions I was building.</li>
-        <li>Hatching plans to build a home server that does a little more than file storage, but for that I need to build something - I haven't done that for a while!</li>
-        <li>Trying to spend more time on <a href="https://howdee.social/@jamiefdhurst" target="_blank">Mastodon</a> and way less on <a href="https://x.com/jamiefdhurst" target="_blank">X/Twitter</a>, I'm not far away from closing that account now.</li>
+        <li>Having returned to work after my 5 months of paternity leave, I'm settling back into a normal weekday and weekend routine.</li>
+        <li>I'm travelling a bit with my day job these days, visiting our offices in Amsterdam, Manchester and London.</li>
+        <li>I'm still reading the <a href="https://www.oreilly.com/library/view/the-staff-engineers/9781098118723/" target="_blank">Staff Engineer's Path by Tanya Reilly</a>, trying to find a little bit of time to finish it as I've already learnt a lot.</li>
+        <li>Still hatching plans to build a home server that does a little more than file storage, but for that I need to build something - I haven't done that for a while!</li>
+        <li>Trying to spend more time on <a href="https://howdee.social/@jamiefdhurst" target="_blank">Mastodon</a>, I've since closed my X and Instagram accounts.</li>
         <li>We're down to a single car: a sensible silver Volvo V40. The 3-door boy-racer Honda was too impractical and needed to go, so my project car days are on hold for a while.</li>
-        <li>In my downtime, I'm playing through a lot of Zelda games on my Switch. I've not finished the emulated Ocarina of Time and Majora's Mask, along with the Link's Awakening remake, and I'm about halfway through completing Breath of the Wild.</li>
-        <li>Our house is completely finished! We're now furnishing the final rooms and planning how we're going to tackle the garden in 2025.</li>
+        <li>In my limited downtime, I'm playing through a lot of Zelda games on my Switch. I've not finished the emulated Ocarina of Time and Majora's Mask, along with the Link's Awakening remake, and I'm almost finished Breath of the Wild. Tears of the Kingdom is next, and I have it all lined up and waiting.</li>
+        <li>Our house is completely finished and mostly furnished, including our front room which has been a de-facto storage area for the last five and a half years. Next on the agenda is the garden and garage, which will be getting started in the spring.</li>
+        <li>We're planning our first family holiday in the summer, around my son's first birthday. I'm very excited to get abroad on a proper holiday again for a change, our last one was in 2022!</li>
       </ul>
       <p>
         This page was inspired by <a href="https://www.tempertemper.net/now" target="_blank">Martin Underhill's Now Page</a>
