Retro programming article and update to now page

--- a/blog/templates/now.html
+++ b/blog/templates/now.html
@@ -11,17 +11,18 @@
         day-to-day. I aim to update this page relatively frequently to tell you what I'm currently up to in and outside of 
         work.
       </p>
-      <p><em>Last updated: 28th January 2025</em></p>
+      <p><em>Last updated: 11th May 2025</em></p>
       <ul>
-        <li>Having returned to work after my 5 months of paternity leave, I'm settling back into a normal weekday and weekend routine.</li>
-        <li>I'm travelling a bit with my day job these days, visiting our offices in Amsterdam, Manchester and London.</li>
-        <li>I'm still reading the <a href="https://www.oreilly.com/library/view/the-staff-engineers/9781098118723/" target="_blank">Staff Engineer's Path by Tanya Reilly</a>, trying to find a little bit of time to finish it as I've already learnt a lot.</li>
+        <li>Our son is almost a year old, and he continues to be the best person ever and the best thing that's ever happened to me and my wife.</li>
+        <li>Meeting up with local friends a lot more often for pub trips, which is something I was out of practice with - this has been a huge mental health boost.</li>
+        <li>Continuing to focus on developer experience at work, with a particular focus on new generative AI tools and workflows.</li>
+        <li>Still travelling a lot with work, I tend to be in Amsterdam every 3 weeks or so, with occasional stops in Manchester or London.</li>
+        <li>Recently splashed out on an M4 Max MacBook Pro, which I'm using to write this on a Sunday morning.</li>
         <li>Still hatching plans to build a home server that does a little more than file storage, but for that I need to build something - I haven't done that for a while!</li>
-        <li>Trying to spend more time on <a href="https://howdee.social/@jamiefdhurst" target="_blank">Mastodon</a>, I've since closed my X and Instagram accounts.</li>
-        <li>We're down to a single car: a sensible silver Volvo V40. The 3-door boy-racer Honda was too impractical and needed to go, so my project car days are on hold for a while.</li>
-        <li>In my limited downtime, I'm playing through a lot of Zelda games on my Switch. I've not finished the emulated Ocarina of Time and Majora's Mask, along with the Link's Awakening remake, and I'm almost finished Breath of the Wild. Tears of the Kingdom is next, and I have it all lined up and waiting.</li>
-        <li>Our house is completely finished and mostly furnished, including our front room which has been a de-facto storage area for the last five and a half years. Next on the agenda is the garden and garage, which will be getting started in the spring.</li>
-        <li>We're planning our first family holiday in the summer, around my son's first birthday. I'm very excited to get abroad on a proper holiday again for a change, our last one was in 2022!</li>
+        <li>Not doing a very good job of posting at all on <a href="https://howdee.social/@jamiefdhurst" target="_blank">Mastodon</a>, mostly lurking and reading these days.</li>
+        <li>Planning in the next few weeks to clear out the garage, which would allow me a bit of space to look for a project car again, something I haven't had since the Land Rover was stolen.</li>
+        <li>Finished the Zelda games on the Switch for now, I'm back onto the Xbox Series X and playing Assassin's Creed Valhalla.</li>
+        <li>Somehow, I'm still reading the <a href="https://www.oreilly.com/library/view/the-staff-engineers/9781098118723/" target="_blank">Staff Engineer's Path by Tanya Reilly</a>, trying to find a little bit of time to finish it as I've already learnt a lot.</li>
       </ul>
       <p>
         This page was inspired by <a href="https://www.tempertemper.net/now" target="_blank">Martin Underhill's Now Page</a>
